# azurite-node-bindings

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  docs.yml  release.yml
examples/: azurite.rs  azurite_blob.rs  azurite_queue.rs  azurite_table.rs
examples/common/: mod.rs
nixos/modules/azurite/: default.nix  test.nix
nixos/modules/azurite-blob/: default.nix  test.nix
nixos/modules/azurite-queue/: default.nix  test.nix
nixos/modules/azurite-table/: default.nix  test.nix
src/: lib.rs
